Added rALT, moved fonts, fixed readme, help, license, php, copyright year

--- a/release/l/ladino/source/readme.htm
+++ b/release/l/ladino/source/readme.htm
@@ -18,19 +18,31 @@
 
 <p>How to cite:</p>
 <p>
-    Vargo, Julian (2025). Teklado Ladino - Ladino Keyboard [Online Software]. Keyman.
+    Vargo, Julian (Version Year). Teklado Ladino - Ladino Keyboard [Online Software]. Keyman.
 </p>
 <p>
 <p/>
-<p>Created by Julian Vargo in 2025<p/>
-<p>Kriado por Julian Vargo in 2025<p/>
+<p>Created by Julian Vargo<p/>
+<p>Kriado por Julian Vargo<p/>
 <p><p/>
+<h2>Desktop Keyboard Layout</h2>
+<div id='osk' data-states='default'>
+</div>
 <p>Use Shift for word-final letters, other Hebrew letters, and for special symbols<p/>
-<p>Use Alt for Roman letters<p/>
-<p>Use Alt+Shift for capital Roman letters, and for special symbols<p/>
 <p>Kulaneesh Shift para letras a la fin de los biervos, otras letras ebreos i simbolos espesyales<p/>
-<p>Kulaneesh Alt para letras latinas<p/>
-<p>Kulaneesh Alt+Shift para letras latinas en mayusculas i simbolos espesyales<p/>
+<h2>Desktop Keyboard Layout</h2>
+<div id='osk' data-states='shift'>
+</div>
+<p>Use Right Alt for Roman letters<p/>
+<p>Kulaneesh Alt Derecho para letras latinas<p/>
+<h2>Desktop Keyboard Layout</h2>
+<div id='osk' data-states='rightalt'>
+</div>
+<p>Use RightAlt+Shift for capital Roman letters, and for special symbols<p/>
+<p>Kulaneesh Alt Derecho+Shift para letras latinas en mayusculas i simbolos espesyales<p/>
+<h2>Desktop Keyboard Layout</h2>
+<div id='osk' data-states='rightalt-shift'>
+</div>
 <p><p/>
 <p>Please email julianvargo@berkeley.edu for any questions<p/>
 <p>Si tenesh kualkera demanda, embiyesh un mesaj a julianvargo@berkeley.edu<p/> 
