Fixed some errors

--- a/release/m/mara/source/readme.htm
+++ b/release/m/mara/source/readme.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mara Keyboard</title>
+  <title>Mara</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -12,10 +12,10 @@
 </head>
 <body>
 
-<h1>Mara Keyboard</h1>
+<h1>Mara</h1>
 
 <p>
-  The Mara Keyboard made for Mara people in order to type Mara words easily.
+  The Mara Keyboard created for Mara people.
 </p>
 
 <p>Copyright © Laitei</p>
