--- a/release/g/german_enhanced/source/readme.htm
+++ b/release/g/german_enhanced/source/readme.htm
@@ -20,7 +20,7 @@
     It's an enhanced version of German Basic 1.1 (basic_kbdgr).
 </p>
 
-<p>(c) 2009-2019 SIL International</p>
+<p>(c) 2025 Xaver Nitsch</p>
 
 </body>
 </html>
