--- a/release/c/cantonese_telex/source/welcome.htm
+++ b/release/c/cantonese_telex/source/welcome.htm
@@ -33,18 +33,17 @@
   Cantonese Telex keyboard for the Universal Version Script of the National Language for Cantonese Oạt Ngữ Quóc Ngữ Tị Thung Yụng Bản粵語國語字通用版
 </p>
 <p>粵語國語字係一種拉丁化嘅粵語文字，意在發展粵語表音文字，縮短粵文學習同書寫時間，增強粵語使用者之間嘅凝聚力同自我認同<p>
-<p>粵語國語字通用版本集合咗各種粵語口音嘅特點，形成咗一種能夠體現並且描述各種粵語口音嘅粵語表音文字，又減低咗同音字現象嘅影響，為唔同地區唔同口音嘅粵語使用者提供咗一種通用嘅書面文字<p> 
+<p>粵語國語字通用版本集合咗各種粵語口音嘅特點，形成咗一種能夠體現並且描述各種粵語口音嘅粵語表音文字，又減低咗同音字現象嘅影響，為唔同地區唔同口音嘅粵語使用者提供咗一種通用嘅書面文字</p> 
   <p> Oạt-Ngữ Quóc-Ngữ-Tị hệ yât chủng Lai-đinh hóa ké Oạt Ngữ mần-tị, ý tọi phát chiển Oạt Ngữ biểu-yâm mần-tị, suc đoản Oạt Mần học-tập thùng sư-slẻ sị-kan, tăng-khường Oạt-Ngữ sỉ-yụng-chẻ chi-kan ké ngình-tụi-lịch thùng tị-ngõ nhịnh-thùng</p>
- <p>Oạt-Ngữ Quóc-Ngữ-Tị Thung-Yụng Bản-Bổn tập-hập chỏ cóc-chủng Oạt-Ngữ hẩu-yâm ké đặc-điểm, yình-sình chỏ yât chủng nằng-cấu thể-yiện bính-xẻ miều-suất cóc-chủng Oạt-Ngữ hẩu-yâm ké Oạt-Ngữ biểu-yâm mần-tị, ựu kảm-đê chỏ thùng-yâm-xì ké yỉnh-hưởng, vỵ m̀ thùng đỵ-khư m̀ thùng hẩu-yâm ké Oạt-Ngữ sỉ-yụng-chẻ thề-cung chỏ yât chủng thung-yụng ké sư-miện mần-tị
+ <p>Oạt-Ngữ Quóc-Ngữ-Tị Thung-Yụng Bản-Bổn tập-hập chỏ cóc-chủng Oạt-Ngữ hẩu-yâm ké đặc-điểm, yình-sình chỏ yât chủng nằng-cấu thể-yiện bính-xẻ miều-suất cóc-chủng Oạt-Ngữ hẩu-yâm ké Oạt-Ngữ biểu-yâm mần-tị, ựu kảm-đê chỏ thùng-yâm-xì ké yỉnh-hưởng, vỵ m̀ thùng đỵ-khư m̀ thùng hẩu-yâm ké Oạt-Ngữ sỉ-yụng-chẻ thề-cung chỏ yât chủng thung-yụng ké sư-miện mần-tị</p>
   <p> Chữ Quốc Ngữ tiếng Quảng Đông là một loại chữ viết La-tinh hóa của tiếng Quảng Đông, nhằm mục đích phát triển chữ viết biểu âm của tiếng Quảng Đông, giảm bớt thời gian học và viết tiếng Quảng Đông, nâng cao sức hướng tâm và khẳng định căn cước của những người sử dụng tiếng Quảng Đông</p>
-<p>Chữ Quốc Ngữ tiếng Quảng Đông thông dụng đã tổng hợp đặc trưng của các loại giọng của tiếng Quảng, hình thành một chữ viết biểu âm có thể thể hiện và mô tả các loại giọng của tiếng Quảng, cũng bớt ảnh hưởng của hiện tượng từ đồng âm, cho những người nói các giọng của tiếng Quảng Đông ở khắp nơi một hệ thống chữ viết thung yụng <p>
+<p>Chữ Quốc Ngữ tiếng Quảng Đông thông dụng đã tổng hợp đặc trưng của các loại giọng của tiếng Quảng, hình thành một chữ viết biểu âm có thể thể hiện và mô tả các loại giọng của tiếng Quảng, cũng bớt ảnh hưởng của hiện tượng từ đồng âm, cho những người nói các giọng của tiếng Quảng Đông ở khắp nơi một hệ thống chữ viết thung yụng </p>
   <p> The script of national language for Cantonese is a romanized Cantonese script aimed at developing a phonetic writing system for Cantonese, reduce the time of learning and writing of Cantonese, while strengthening the cohesion and self-identity among Cantonese speakers.</p>
   <p> The universal version of the script of national language for Cantonese combine the character of various accents of Cantonese, forms a phonetic writing system for Cantonese which demonstrates and describe various of Cantonese accents, and reduced the impact of homophone, provides a common written system for Cantonese speakers in different area with different accent.</p>
-  <p>
 
  <h1>音韻表 phonologic map</h1>
- <p> 建議以下嘅粵語國語字音韻表打字<p>
- <p> The suggested form of spelling of Cantonese Romanization<p></p>
+ <p> 建議以下嘅粵語國語字音韻表打字</p>
+ <p> The suggested form of spelling of Cantonese Romanization</p>
  
  <h1>韻首 Phụ Âm consonants</h1>
  <img src='consonants.png' alt='Keyboard Layout'>
@@ -112,7 +111,7 @@
  <img src='tones.png' alt='Keyboard Layout'>
 
 </p>
-<p>Specific Alphabet mẫu tự đặc biệt 特別字母<p>
+<p>Specific Alphabet mẫu tự đặc biệt 特別字母</p>
 <table>
  <tbody>
  <tr>
@@ -159,9 +158,9 @@
  </tbody>
 </table>
 
-<p>tone rules quy tắc thanh điệu 音調規則<p>
- <p> 對應粵拼嘅第一聲唔使打，第二聲打r，第三聲打s，第四聲打f，第五聲打x，第六聲打j <p>
- <p> tone 1 for nothing, tone 2 = r, tone 3 =s, tone 4 = f, tone 5 = x, tone 6 = j <p>
+<p>tone rules quy tắc thanh điệu 音調規則</p>
+ <p> 對應粵拼嘅第一聲唔使打，第二聲打r，第三聲打s，第四聲打f，第五聲打x，第六聲打j </p>
+ <p> tone 1 for nothing, tone 2 = r, tone 3 =s, tone 4 = f, tone 5 = x, tone 6 = j </p>p>
 <h2>Tonal diacritics</h2>
 
 <table>
@@ -237,9 +236,9 @@
  </tbody>
 </table>
 
-<p>examples: 舉例： <p>
- <p> ar > ả, as > á, af > à, ax > ã, aj > ạ <p>
- <p> 譬如話『兩』嘅國語字係"lưỡng"， 咁輸入內容就係"luongwx"<p>
+<p>examples: 舉例： </p>
+ <p> ar > ả, as > á, af > à, ax > ã, aj > ạ </p>
+ <p> 譬如話『兩』嘅國語字係"lưỡng"， 咁輸入內容就係"luongwx"</p>
   <p></p>
   <h2>Punctuation and Capitalization標點同大小寫biêu điểm thùng đại sliểu slẻ</h2>
   <p>A space " " should be added betweem each words or between each syllable of cantonese origin or sino-cantonese origin words.</p>
@@ -264,13 +263,13 @@
   <p></p>
 
 
-<p> 雙擊音調鍵同特殊轉化鍵，取消轉化，變返原本嘅拼寫 <p>
- <p> doubletaping leads to generate original letters:  <p>
+<p> 雙擊音調鍵同特殊轉化鍵，取消轉化，變返原本嘅拼寫 </p>
+ <p> doubletaping leads to generate original letters:  </p>
    <p>
      If more than one tone marking key is pressed, the last one will be used. For example, typing <code>asf</code> will return "à". To write a tone marking key as a normal character, one has to press it twice: <code>her</code> becomes <code>hẻ</code>, while <code>herr</code> becomes <code>her</code>.
    </p>
- <p> 使用Z鍵取消音調轉換 <p>
- <p> tap Z key to remove tonations  <p>
+ <p> 使用Z鍵取消音調轉換 </p>
+ <p> tap Z key to remove tonations  </p>p>
 
 
   <a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/oatnguquocnguti.yaml">Dictionary for the script of National Language universal version Quóc Ngữ Tị大粤國音字匯－粵語國語字字典總合通用版</a>
