--- a/release/g/german_enhanced/source/welcome/welcome.htm
+++ b/release/g/german_enhanced/source/welcome/welcome.htm
@@ -35,7 +35,7 @@
 	<p><a href="LayoutU_SRA.png"><img class="keyboard" src="LayoutU_SRA.png" alt="Right ALT Shift state" /></a></p>
 
 
-<p>(c) 2025 Xaver Nitsch</p>
+<p>(c) Xaver Nitsch</p>
 
 </body>
 </html>
